Clean up some code analysis warnings